# loopkit

./: .gitignore  AGENTS.md  BUILD-MAP.md  CLAUDE.md  LICENSE  README.md  TICKET_TEMPLATE.md  config.py  engine.py  example_local.py  example_multiagent.py  gates.py  memory.py  pyproject.toml  refine.py  roles.py  run.sh  shield.py  slack_app.py  solution.py  test_solution.py  workspace.py
docs/superpowers/plans/: 2026-07-08-durable-door-dedupe.md  2026-07-08-idea-refinement.md  2026-07-09-claude-session-front.md  2026-07-09-package-cli.md  2026-07-09-repo-routing.md  2026-07-10-delivery-automation.md  2026-07-11-telegram-front.md  2026-07-13-domain-gate-edit-mode.md
docs/superpowers/specs/: 2026-07-08-durable-door-dedupe-design.md  2026-07-08-idea-refinement-design.md  2026-07-09-claude-session-front-design.md  2026-07-09-package-cli-design.md  2026-07-09-repo-routing-design.md  2026-07-10-delivery-automation-design.md  2026-07-11-telegram-front-design.md  2026-07-13-domain-gate-edit-mode-design.md
skills/loopkit/: SKILL.md
src/loopkit/: config.py  deliver.py  engine.py  gates.py  memory.py  refine.py  roles.py  workspace.py
src/loopkit/fronts/: cli.py  slack.py  telegram.py
tests/: test_cli.py  test_cli_agent.py  test_config.py  test_deliver.py  test_domain_gate.py  test_engine.py  test_gates.py  test_memory.py  test_p3.py  test_refine.py  test_shield.py  test_telegram.py
